@@ -1,5 +1,8 @@
 2010-07-27  David Reveman  <davidr@novell.com>
 
+	* list.h:
+	* list.cpp: Add simple Stack class.
+
 	* uielement.cpp (PostRender): When possible use
 	ContextNode::GetTarget instead of ContextNode::GetCr.
 
